# physical_ai_agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  Summary.md  pyproject.toml  requirements for loop test analyzer.md
.github/workflows/: qwen-so101-tool-planner.yml
configs/agent/: qwen3_so101_tool_plan_align_fixed_jaw_cube_edge_green_cube.json  qwen3_so101_tool_plan_align_pick_up_green_cube.json  qwen3_so101_tool_planner.json  (+10 more)
docs/: agentic_physical_ai_plan.md  checkpoint_status.md  evaluation_candidate_matrix_after_libero.md  iphone_continuity_camera_capture.md  lerobot_eval_entrypoints.md  mycobot280_smolvla_training_pipeline.md  non_libero_evaluation_status_2026_06_07.md  real_so100_agentic_layer_checklist_2026_06_06.md  real_so100_agentic_smolvla_handoff_2026_06_07.md  real_so100_contract.md  real_so100_home_pose_2026_06_07.md  real_so100_smolvla_execution_comparison_2026_06_07.md  runpod_cloud.md  runpod_worklog.md  sim_to_real_so101_interactive_contract.md  smolvla_libero_agentic_retry_four_suite_portfolio_report.md  smolvla_libero_agentic_retry_four_suite_portfolio_summary.json  smolvla_libero_agentic_retry_report.md  smolvla_libero_baseline_report.md  smolvla_libero_eval.md  so101_camera_contract.md  so101_fixed_jaw_edge_chain_dataset.md  so101_local_training_standard.md  so101_qwen3_tool_planner.md  so101_renderer_independent_dataset_pipeline.md  so101_smolvla_training_pipeline.md
scripts/: analyze_real_so100_agentic_log.py  analyze_risk1b_selector_ablation.py  analyze_so101_rollout_distribution.py  audit_live_oracle_overlay_output.py  audit_metaworld_very_hard_failures.py  audit_oracle_overlay_center_bias.py  audit_oracle_overlay_milestone_artifacts.py  audit_real_so100_agentic_state_command_plan.py  audit_real_so100_execution_preflight_runbook.py  audit_real_so100_prestage_evidence.py  audit_real_so100_smolvla_processor_adapter.py  audit_so101_dataset_splits.py  bootstrap_checkpoint_01.sh  bootstrap_checkpoint_05_06.sh  bootstrap_checkpoint_07_13.sh  bootstrap_checkpoint_14_15.sh  bootstrap_checkpoint_24.sh  bootstrap_runpod_libero_smolvla_env.sh  bootstrap_runpod_risk1b_vlm_env.sh  build_actual_rgb_synthetic_metadata_true_oracle_codepath_report.py  build_actual_sim_claim_matrix_report.py  build_actual_sim_cross_episode_report.py  build_actual_sim_evidence_preflight_report.py  build_actual_sim_frame_overlay_report.py  build_actual_sim_heuristic_policy_input_report.py  build_actual_sim_heuristic_temporal_report.py  build_actual_sim_only_dashboard.py  build_actual_sim_true_oracle_probe_blocker_report.py  build_actual_sim_true_oracle_readiness_gap_report.py  build_actual_sim_true_oracle_report.py  build_actual_sim_true_oracle_two_stage_result_report.py  build_actual_sim_visual_heuristic_overlay_report.py  build_agentic_retry_four_suite_portfolio_report.py  build_agentic_retry_portfolio_report.py  build_agentic_retry_schema_readiness_report.py  build_agentic_retry_selection_report.py  build_agentic_retry_series_report.py  build_agentic_smolvla_experiment_matrix_result_report.py  build_c0_policy_only_baseline_inventory_report.py  build_cp24_libero_oracle_policy_input_report.py  (+303 more)
tests/: test_analyze_real_so100_agentic_log.py  test_audit_real_so100_agentic_state_command_plan.py  test_audit_real_so100_execution_preflight_runbook.py  test_audit_real_so100_prestage_evidence.py  test_build_libero_in_episode_ablation_report.py  test_build_libero_in_episode_intervention_readiness_report.py  test_build_real_so100_agentic_layer_contract.py  test_build_real_so100_agentic_loop_report.py  test_build_real_so100_agentic_policy_patch.py  test_build_real_so100_agentic_prestage_pack.py  test_build_real_so100_gate_report.py  test_build_real_so100_movement_report.py  test_build_real_so100_policy_camera_feedback.py  test_build_real_so100_prestage_bundle.py  test_build_real_so100_prestage_dashboard.py  test_build_real_so100_prompt_iteration.py  test_build_real_so100_ready_path_fixture.py  test_build_real_so100_reframe_overlay.py  test_build_real_so100_relocation_verifier_packet.py  test_build_real_so100_vla_prompt_packet.py  test_checkpoint_01.py  test_checkpoint_02_04.py  test_checkpoint_05_06.py  test_checkpoint_07_13.py  test_checkpoint_14_15.py  test_checkpoint_16.py  test_checkpoint_17.py  test_checkpoint_18.py  test_checkpoint_19.py  test_checkpoint_20_23.py  test_checkpoint_24.py  test_checkpoint_25.py  test_cli.py  test_green_object_verifier.py  test_lerobot_eval_entrypoint.py  test_lerobot_policy_runner.py  test_lerobot_sampling_augmentation.py  test_libero_agentic_retry.py  test_libero_in_episode.py  test_loop_test_analyzer.py  (+79 more)
(+366 files in other folders)
