[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-ai-agent"
version = "0.1.0"
description = "Mac-local agentic physical AI evaluation stack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mhlee1215" }]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
sim = [
  "mujoco>=3.2",
  "numpy>=1.26",
  "opencv-python>=4.9",
]
web = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "websockets>=12.0",
]
ml = [
  "torch>=2.3",
  "transformers>=4.43",
]

[project.scripts]
physical-ai-agent = "physical_ai_agent.cli:main"
pai-checkpoint-01 = "physical_ai_agent.checkpoints.checkpoint_01:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
