[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-ai-agent"
version = "0.1.0"
description = "Mac-local agentic physical AI evaluation stack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mhlee1215" }]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
sim = [
  "mujoco>=3.2",
  "numpy>=1.26",
  "opencv-python>=4.9",
]
so101 = [
  "so101-nexus-mujoco>=0.3.12,<0.4",
]
web = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "websockets>=12.0",
]
ml = [
  "torch>=2.3",
  "transformers>=4.43",
]
smolvla = [
  "lerobot[smolvla]>=0.5.1,<0.6",
]

[project.scripts]
physical-ai-agent = "physical_ai_agent.cli:main"
pai-checkpoint-01 = "physical_ai_agent.checkpoints.checkpoint_01:main"
pai-checkpoint-02-04 = "physical_ai_agent.checkpoints.checkpoint_02_04:main"
pai-checkpoint-05-06 = "physical_ai_agent.checkpoints.checkpoint_05_06:main"
pai-checkpoint-07-13 = "physical_ai_agent.checkpoints.checkpoint_07_13:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
